--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-/.idea/
-/.gradle/
+### JAVA ###
+*.class
+
+#BlueJ Files #
+.ctxt
+
+# Mobile tool for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+.jar
+.war
+.ear
+
+# Virtual machine crash logs, see
+http://www.java/en/download/help/error.hotspot.xml
+hs_err_pid*
+
+### Gradle ###
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+# End of https://www.gitignore.io/api/java,gradle
+
+
