Added .idea/workspace.xml into gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 .ear
 
 # xml auto-generated
-.xml
+.idea/workspace.xml
 
 # Virtual machine crash logs, see
 http://www.java/en/download/help/error.hotspot.xml
